[gd_scene load_steps=19 format=2]

[ext_resource path="res://Assets/pozadie.png" type="Texture" id=1]
[ext_resource path="res://Assets/BULKYPIX.TTF" type="DynamicFontData" id=2]
[ext_resource path="res://Scenes/Player.tscn" type="PackedScene" id=3]
[ext_resource path="res://Scenes/Turret.tscn" type="PackedScene" id=4]
[ext_resource path="res://Scenes/Castle.tscn" type="PackedScene" id=5]
[ext_resource path="res://Scenes/WinScreen.tscn" type="PackedScene" id=6]
[ext_resource path="res://Scenes/Battery.tscn" type="PackedScene" id=7]
[ext_resource path="res://Scenes/LevelBorder.tscn" type="PackedScene" id=8]
[ext_resource path="res://Scenes/UpgradeStation.tscn" type="PackedScene" id=9]
[ext_resource path="res://Scenes/Charger.tscn" type="PackedScene" id=10]
[ext_resource path="res://Scenes/UpgradePanel.tscn" type="PackedScene" id=11]
[ext_resource path="res://Scripts/Level1.gd" type="Script" id=12]
[ext_resource path="res://Scenes/GameOverScreen.tscn" type="PackedScene" id=13]

[sub_resource type="NavigationPolygon" id=1]
vertices = PoolVector2Array( 192, 480, 192, -40, 256, -40, 256, 416, 448, 480, 768, 416, 768, -40, 832, -40, 832, 480, 576, 480, 576, 608, 448, 608 )
polygons = [ PoolIntArray( 0, 1, 2, 3 ), PoolIntArray( 4, 0, 3, 5 ), PoolIntArray( 5, 6, 7, 8 ), PoolIntArray( 5, 8, 9 ), PoolIntArray( 4, 5, 9 ), PoolIntArray( 4, 9, 10, 11 ) ]
outlines = [ PoolVector2Array( 192, -40, 256, -40, 256, 416, 768, 416, 768, -40, 832, -40, 832, 480, 576, 480, 576, 608, 448, 608, 448, 480, 192, 480 ) ]

[sub_resource type="DynamicFont" id=2]
size = 40
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=3]
size = 45
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=4]
size = 21
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=5]
size = 21
font_data = ExtResource( 2 )

[node name="Level1" type="Node2D"]
script = ExtResource( 12 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 512, 304 )
scale = Vector2( 1, 1.00667 )
texture = ExtResource( 1 )

[node name="Player" parent="." instance=ExtResource( 3 )]
position = Vector2( 512, 360 )

[node name="Turret" parent="." instance=ExtResource( 4 )]
position = Vector2( 408, 296 )

[node name="Navigation2D" type="Navigation2D" parent="."]

[node name="NavigationPolygonInstance" type="NavigationPolygonInstance" parent="Navigation2D"]
navpoly = SubResource( 1 )

[node name="Castle" parent="." instance=ExtResource( 5 )]
position = Vector2( 512, 576 )

[node name="Spawners" type="Node2D" parent="."]

[node name="FirstSpawner" type="Position2D" parent="Spawners"]
position = Vector2( 224, -24 )

[node name="SecondSpawner" type="Position2D" parent="Spawners"]
position = Vector2( 800, -24 )

[node name="Position2D" type="Position2D" parent="Spawners"]
position = Vector2( 64, 192 )

[node name="Position2D2" type="Position2D" parent="Spawners"]
position = Vector2( 64, 320 )

[node name="LevelBorder" parent="." instance=ExtResource( 8 )]

[node name="UpgradeStation" parent="." instance=ExtResource( 9 )]
position = Vector2( 464, 87.2063 )

[node name="Charger" parent="." instance=ExtResource( 10 )]
position = Vector2( 680, 80 )

[node name="Battery" parent="." instance=ExtResource( 7 )]
position = Vector2( 624, 288 )

[node name="Bullet" type="Node2D" parent="."]

[node name="UpgradePanel" parent="." instance=ExtResource( 11 )]
visible = false

[node name="TimerBetweenWaves" type="Timer" parent="."]

[node name="TimerBetweenMonsters" type="Timer" parent="."]

[node name="score" type="Label" parent="."]
margin_right = 184.0
margin_bottom = 64.0
custom_colors/font_color = Color( 0.0784314, 0.0784314, 0.0784314, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 2 )
text = "Score"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="score2" type="Label" parent="."]
margin_top = 64.0
margin_right = 184.0
margin_bottom = 128.0
custom_colors/font_color = Color( 0.0784314, 0.0784314, 0.0784314, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 2 )
text = "Score"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="coins" type="Label" parent="."]
margin_left = 840.0
margin_top = 2.0
margin_right = 1024.0
margin_bottom = 64.0
custom_colors/font_color = Color( 0.0784314, 0.0784314, 0.0784314, 1 )
custom_fonts/font = SubResource( 3 )
text = "Coins"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="coins2" type="Label" parent="."]
margin_left = 840.0
margin_top = 64.0
margin_right = 1024.0
margin_bottom = 126.0
custom_colors/font_color = Color( 0.0784314, 0.0784314, 0.0784314, 1 )
custom_fonts/font = SubResource( 3 )
text = "Coins"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="timeWave" type="Label" parent="."]
margin_left = 8.0
margin_top = 552.0
margin_right = 440.0
margin_bottom = 600.0
custom_colors/font_color = Color( 0.0784314, 0.0784314, 0.0784314, 1 )
custom_fonts/font = SubResource( 4 )
text = "iuu"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="WaveInfo2" type="Label" parent="."]
margin_left = 8.0
margin_top = 512.0
margin_right = 440.0
margin_bottom = 560.0
custom_colors/font_color = Color( 0.0784314, 0.0784314, 0.0784314, 1 )
custom_fonts/font = SubResource( 5 )
text = "iuu"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="WinScreen" parent="." instance=ExtResource( 6 )]
visible = false

[node name="GameOverScreen" parent="." instance=ExtResource( 13 )]
visible = false

[connection signal="timeout" from="TimerBetweenWaves" to="." method="_on_TimerBetweenWaves_timeout"]
[connection signal="timeout" from="TimerBetweenMonsters" to="." method="_on_TimeBetweenMonsters_timeout"]
